fixed authentification with jwt